# OpenGL

./: CMakeLists.txt
src/Common/Geometry/include/Geometry/: Point.h
src/GL/GuiCore/: CMakeLists.txt
src/GL/GuiCore/glfw/: CMakeLists.txt
src/GL/GuiCore/include/GL/: Application.h  KeyEvent.h  Monitor.h  MouseButtonEvent.h  Widget.h  Window.h
src/GL/GuiCore/src/: Application.cpp  ApplicationPrivate.cpp  ApplicationPrivate.h  Monitor.cpp  Widget.cpp  Window.cpp
src/GL/Widget/: CMakeLists.txt
src/GL/Widget/include/GL/: Window_old.h
src/GL/Widget/include/GL/Widgets/: LabelWidget.h
src/GL/Widget/src/: FrameRateWidget.cpp  LabelWidget.cpp  Window_old.cpp
src/Targets/1_HelloWindow/: CMakeLists.txt
src/Targets/1_HelloWindow/src/: main.cpp
src/Targets/2_HelloTriangle/src/: main.cpp
src/Targets/HelloASCII/src/: main.cpp
src/Targets/HelloTerminal/src/: main.cpp
